# rental-backend/src/routes/booking.routes.ts
@@ -7,14 +7,14 @@ const router = Router();
 
 
 router.post("/create", isAuthenticated, restrictTo("RENTER"), BookingController.bookProperty);
-router.get("/", isAuthenticated, restrictTo("RENTER"), BookingController.getBookingsByRenter);
+router.get("/", isAuthenticated, BookingController.getBookingsByRenter);
 router.get("/status/:status", isAuthenticated, restrictTo("RENTER"), BookingController.getBookingsByStatus);
 router.post("/check-availability", isAuthenticated, BookingController.checkAvailability);
 
-router.get("/host", isAuthenticated, restrictTo("HOST"), BookingController.getBookingsByHost);
+router.get("/host", isAuthenticated,BookingController.getBookingsByHost);
 router.get("/property/:propertyId", isAuthenticated, restrictTo("HOST"), BookingController.getBookingsByProperty);
 router.patch("/:id/confirm", isAuthenticated, restrictTo("HOST"), BookingController.confirmBooking);
-router.patch("/:id/cancel", isAuthenticated, BookingController.cancelBooking); // Both roles could use
+router.patch("/:id/cancel", isAuthenticated, BookingController.cancelBooking);
 
 
 router.get("/:id", isAuthenticated, BookingController.getBookingById);
